<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Bienvenido a \n Simon Dice"
        android:textAlignment="center"
        android:textColor="@color/silver"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/ic_simon_foreground"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/level1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/easy"
        android:textColor="@color/black"
        android:text="@string/facil" />

    <Button
        android:id="@+id/level2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/normal"
        android:textColor="@color/black"
        android:text="@string/intermedio" />

    <Button
        android:id="@+id/level3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/high"
        android:textColor="@color/black"
        android:text="@string/dificil" />

    <Button
        android:id="@+id/help"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/silver"
        android:textColor="@color/black"
        android:text="Cómo jugar" />


</LinearLayout>